Allow to edit loan account not assigned to institution

BUG: 402672
FIXED-IN: 5.0.5